--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -97,5 +97,5 @@ jobs:
               uses: peaceiris/actions-gh-pages@v3
               with:
                 publish_dir: ./build/html
-                github_token: ${{ secrets.GH_ACCESS_TOKEN }}
+                github_token: ${{ secrets.GITHUB_TOKEN }}
                 commit_message: "Generate Documentation"
