bug/cicd : Correcting documentation path

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,6 +96,6 @@ jobs:
             - name: Push doc to Github Pages
               uses: peaceiris/actions-gh-pages@v3
               with:
-                publish_dir: ./build/html
+                publish_dir: ./module/docs/build/html
                 github_token: ${{ secrets.GH_ACCESS_TOKEN }}
                 commit_message: "Generate Documentation"
