--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -91,7 +91,7 @@ jobs:
               uses: coverallsapp/github-action@master
               with:
                 github-token: ${{ secrets.GITHUB_TOKEN }}
-                path-to-lcov: coverage.lcov
+                path-to-lcov: ./module/coverage.lcov
 
             - name: Push doc to Github Pages
               uses: peaceiris/actions-gh-pages@v3
