--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -85,7 +85,7 @@ jobs:
               run: ./module/scripts/sphinx.sh
 
             - name: Launching tests
-              run: ./module/scripts/robot.sh -l WARN -d ./module/docs/build/html
+              run: ./module/scripts/robot.sh -l WARN -d ./docs/build/html
 
             - uses: actions/upload-artifact@v3
               with:
