--- a/.github/workflows/latest.yml
+++ b/.github/workflows/latest.yml
@@ -90,7 +90,7 @@ jobs:
               uses: codecov/codecov-action@v3
               with:
                 token: ${{ secrets.CODECOV_TOKEN }}
-                files: coverage.xml
+                files: .coverage
                 directory: ./module/
                 name: codecov-${{ github.event.repository.name }}
                 fail_ci_if_error: true
