--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -92,12 +92,16 @@ jobs:
                 name: code-coverage
                 path: ./module/coverage.lcov
 
-            - name: Coveralls
-              uses: coverallsapp/github-action@master
+            - name: Upload coverage to Codecov
+              uses: codecov/codecov-action@v3
               with:
-                github-token: ${{ secrets.GITHUB_TOKEN }}
-                path-to-lcov: ./module/coverage.lcov
-                base-path: ./module/
+                token: ${{ secrets.CODECOV_TOKEN }}
+                files: coverage.xml
+                directory: ./module/
+                name: codecov-${{ github.event.repository.name }}
+                fail_ci_if_error: false
+                verbose: true
+                commit_parent: ${{ github.ref_name }}
 
             - name: Push doc to Github Pages
               uses: peaceiris/actions-gh-pages@v3
